Fix weird extra space in show more papers

--- a/themes/fury/static/css/main.css
+++ b/themes/fury/static/css/main.css
@@ -138,6 +138,10 @@ a:visited {
     text-align: center;
 }
 
+#show-more-papers {
+    margin: 20px;
+}
+
 .show-more, .show-less {
     margin: 0px auto;
     font-size: 10px;
